Add subject and topic keys to imported posts

--- a/source/events/at-media/2006.markdown
+++ b/source/events/at-media/2006.markdown
@@ -11,6 +11,8 @@ tag = [
     'conference',
     'conference-writeup',
 ]
+subject = 'events'
+topic = 'at-media'
 ```
 
 I’m quite late on writing about the 2006 @media conference. Some people
